--- a/index.html
+++ b/index.html
@@ -1,43 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/public/sushi.png" />
-    <title>Sushiman</title>
-    <link rel="stylesheet" href="Css/style.css">
-  </head>
-  <body>
+    <link rel="icon" type="image/png" href="/sushi.png">
+    <link rel="stylesheet" href="css/style.css">
+    <title>SushiMan</title>
+</head>
+<body>
     <header>
-      <nav class="header__nav">
-        <div class="header__logo">
-          <h4>Sushiman</h4>
-          <div class="header__logo-overlay"></div>
-        </div>
-
-        <ul class="header__menu">
-          <li>
-            <a href="#menu">Menu</a>
-          </li>
-          <li>
-            <a href="#food">Food</a>
-          </li>
-          <li>
-            <a href="#services">Services</a>
-          </li>
-          <li>
-            <a href="#about-us">About Us</a>
-          </li>
-          <li>
-            <img src="assets/search.svg" alt="search" />
-          </li>
-        </ul>
-
-      </nav>
+        <nav class="header__nav">
+            <div class="header__logo">
+                <h4>SushiMan</h4>
+                <div class="header__logo-overlay"></div>
+            </div>
+            <ul class="header__menu">
+                <li><a href="#menu">Menu</a></li>
+                <li><a href="#food">Food</a></li>
+                <li><a href="#about us">About us</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><img src="assets/search.svg" alt="Search">
+                </li>
+            </ul>
+            <ul class="header__menu-mobile">
+                <li><img src="assets/menu.svg" alt="menu"></li>
+            </ul>
+        </nav>
     </header>
 
-
-    <script src="JS/script.js" type="module"></script>
-  </body>
+    <script src="javascript/script.js" type="module"></script>
+</body>
 </html>
 
