--- a/index.html
+++ b/index.html
@@ -11,24 +11,49 @@
     <header>
         <nav class="header__nav">
             <div class="header__logo">
-                <h4>SushiMan</h4>
+                <h4 data-aos="fade-down">Sushiman</h4>
                 <div class="header__logo-overlay"></div>
             </div>
-            <ul class="header__menu">
+
+            <ul class="header__menu" data-aos="fade-down">
                 <li><a href="#menu">Menu</a></li>
                 <li><a href="#food">Food</a></li>
-                <li><a href="#about us">About us</a></li>
                 <li><a href="#services">Services</a></li>
-                <li><img src="assets/search.svg" alt="Search">
-                </li>
+                <li><a href="#about-us">About Us</a></li>
+                <li><img src="assets/search.svg" alt="search" /></li>
             </ul>
-            <ul class="header__menu-mobile">
-                <li><img src="assets/menu.svg" alt="menu"></li>
+
+            <ul class="header__menu-mobile" data-aos="fade-down">
+                <li><img src="assets/menu.svg" alt="menu" /></li>
             </ul>
         </nav>
     </header>
 
+    <section class="hero">
+        <div class="hero-image">
+            <img src="assets/sushi-1.png" alt="sushi" data-aos="fade-up" />
+            <h2 data-aos="fade-up">
+                日 <br />
+                本 <br />
+                食
+            </h2>
+        </div>
+
+        <div class="hero-content">
+            <div class="hero-content-info">
+                <h1>Feel the taste of Japanese Food</h1>
+                <p>Discover the rich flavors of Japanese cuisine, from savory sushi to sweet mochi. Experience the harmony of taste and tradition at Sushiman.</p>
+
+                <div class="hero-content__button">
+                    
+                </div>                
+
+            </div>
+        </div>
+    </section>
+
     <script src="javascript/script.js" type="module"></script>
 </body>
 </html>
+
 
